--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
     "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.3.0",
     "slick-carousel": "^1.8.1",
