--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
