--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
+    "https": "^1.0.0",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.21.0",
@@ -26,6 +31,8 @@
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:4000",
