--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
