--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
     "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
     "https": "^1.0.0",
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
